[package]
name = "os-memlock"
version = "0.1.1"
edition = "2024"
description = "Unsafe thin wrappers around OS memory locking syscalls (mlock/munlock/madvise)"
license = "MIT OR Apache-2.0"

readme = "README.md"
documentation = "https://docs.rs/os-memlock"
keywords = ["memory", "mlock", "munlock", "madvise", "security"]
repository = "https://github.com/thatnewyorker/os-memlock"
homepage = "https://github.com/thatnewyorker/os-memlock"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
libc = "0.2"
